k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-apigate
spec:
  selector:
    app: backend-apigate
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 8083          
      targetPort: 8083
